fixed rr adding the the first of the readyqueue when adding processess instead of last